[gd_scene load_steps=17 format=3 uid="uid://bhym2p0vnk2"]

[ext_resource type="FontFile" uid="uid://digbq0mlkbh3p" path="res://Assets/Font/Schr√∂dinger.ttf" id="1_ao2y4"]
[ext_resource type="Script" path="res://Scripts/player_ui_screen.gd" id="1_ci0l3"]
[ext_resource type="FontFile" uid="uid://lxeddhw7kru1" path="res://Assets/Font/ARCADECLASSIC.TTF" id="3_4p276"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cshuc"]
bg_color = Color(0.52549, 0.745098, 0.752941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4uqr"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmauq"]
bg_color = Color(0.498039, 0.458824, 0.501961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpprp"]
bg_color = Color(0.952941, 0.658824, 0.72549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdhhl"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5viw2"]
bg_color = Color(0.211765, 0.709804, 0.317647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q0gs2"]
bg_color = Color(0.72549, 0.854902, 0.658824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cfr80"]
bg_color = Color(0.368627, 0.623529, 0.505882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s3in2"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_467td"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfsfk"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrdp5"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s08qj"]
bg_color = Color(1, 1, 1, 1)

[node name="pause_stats" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ci0l3")

[node name="stats_ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.223529)

[node name="PanelContainer" type="PanelContainer" parent="stats_ColorRect"]
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 311.0
offset_bottom = 172.0

[node name="Points" type="Label" parent="stats_ColorRect"]
layout_mode = 0
offset_left = 33.0
offset_top = 22.0
offset_right = 120.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "Current Points :"

[node name="Label" type="Label" parent="stats_ColorRect/Points"]
layout_mode = 0
offset_left = 91.0
offset_right = 131.0
offset_bottom = 13.0
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "16"

[node name="Attack" type="ColorRect" parent="stats_ColorRect"]
layout_mode = 2
offset_left = 28.0
offset_top = 43.0
offset_right = 299.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.619608, 0.670588, 1)

[node name="Label" type="Label" parent="stats_ColorRect/Attack"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = -6.0
offset_right = 74.0
offset_bottom = 7.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "Attack : "

[node name="AtkInc" type="Button" parent="stats_ColorRect/Attack/Label"]
layout_mode = 2
offset_left = 139.0
offset_top = -3.0
offset_right = 194.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_cshuc")
theme_override_styles/hover = SubResource("StyleBoxFlat_n4uqr")
text = "level up"

[node name="CurrentValue" type="Label" parent="stats_ColorRect/Attack/Label"]
layout_mode = 0
offset_left = 65.0
offset_right = 105.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "13"

[node name="cost" type="Label" parent="stats_ColorRect/Attack/Label"]
layout_mode = 0
offset_left = 194.0
offset_top = -3.0
offset_right = 245.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_tmauq")
text = "2 points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stun" type="ColorRect" parent="stats_ColorRect"]
layout_mode = 2
offset_left = 28.0
offset_top = 66.0
offset_right = 299.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.619608, 0.670588, 1)

[node name="Label" type="Label" parent="stats_ColorRect/Stun"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = -6.0
offset_right = 74.0
offset_bottom = 7.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "Stun % : "

[node name="StunInc" type="Button" parent="stats_ColorRect/Stun/Label"]
layout_mode = 2
offset_left = 139.0
offset_top = -3.0
offset_right = 194.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_cshuc")
theme_override_styles/hover = SubResource("StyleBoxFlat_n4uqr")
text = "level up"

[node name="CurrentValue" type="Label" parent="stats_ColorRect/Stun/Label"]
layout_mode = 0
offset_left = 65.0
offset_right = 105.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "13"

[node name="cost" type="Label" parent="stats_ColorRect/Stun/Label"]
layout_mode = 0
offset_left = 194.0
offset_top = -3.0
offset_right = 245.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_tmauq")
text = "2 points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CritRate" type="ColorRect" parent="stats_ColorRect"]
layout_mode = 2
offset_left = 28.0
offset_top = 89.0
offset_right = 299.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.619608, 0.670588, 1)

[node name="Label" type="Label" parent="stats_ColorRect/CritRate"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = -6.0
offset_right = 74.0
offset_bottom = 7.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "Crit Rate : "

[node name="CRInc" type="Button" parent="stats_ColorRect/CritRate/Label"]
layout_mode = 2
offset_left = 139.0
offset_top = -3.0
offset_right = 194.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_cshuc")
theme_override_styles/hover = SubResource("StyleBoxFlat_n4uqr")
text = "level up"

[node name="CurrentValue" type="Label" parent="stats_ColorRect/CritRate/Label"]
layout_mode = 0
offset_left = 78.0
offset_top = 0.5
offset_right = 118.0
offset_bottom = 13.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "13"

[node name="cost" type="Label" parent="stats_ColorRect/CritRate/Label"]
layout_mode = 0
offset_left = 194.0
offset_top = -3.0
offset_right = 245.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_tmauq")
text = "2 points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CritDamage" type="ColorRect" parent="stats_ColorRect"]
layout_mode = 2
offset_left = 28.0
offset_top = 113.0
offset_right = 299.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.619608, 0.670588, 1)

[node name="Label" type="Label" parent="stats_ColorRect/CritDamage"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = -6.0
offset_right = 74.0
offset_bottom = 7.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "Crit Damage : "

[node name="CDInc" type="Button" parent="stats_ColorRect/CritDamage/Label"]
layout_mode = 2
offset_left = 139.0
offset_top = -3.0
offset_right = 194.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_cshuc")
theme_override_styles/hover = SubResource("StyleBoxFlat_n4uqr")
text = "level up"

[node name="CurrentValue" type="Label" parent="stats_ColorRect/CritDamage/Label"]
layout_mode = 0
offset_left = 83.0
offset_top = 0.5
offset_right = 123.0
offset_bottom = 13.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "13"

[node name="cost" type="Label" parent="stats_ColorRect/CritDamage/Label"]
layout_mode = 0
offset_left = 194.0
offset_top = -3.0
offset_right = 245.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_tmauq")
text = "2 points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="ColorRect" parent="stats_ColorRect"]
layout_mode = 2
offset_left = 28.0
offset_top = 137.0
offset_right = 299.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.807843, 0.215686, 0.337255, 1)

[node name="Label" type="Label" parent="stats_ColorRect/Health"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = -6.0
offset_right = 74.0
offset_bottom = 7.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "Health : "

[node name="CurrentValue" type="Label" parent="stats_ColorRect/Health/Label"]
layout_mode = 0
offset_left = 49.0
offset_top = 0.5
offset_right = 89.0
offset_bottom = 13.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
text = "13"

[node name="BuyPotion" type="Button" parent="stats_ColorRect/Health/Label"]
layout_mode = 0
offset_left = 138.0
offset_top = -3.0
offset_right = 194.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 9
theme_override_styles/normal = SubResource("StyleBoxFlat_bpprp")
theme_override_styles/hover = SubResource("StyleBoxFlat_tdhhl")
text = "buy potion"

[node name="cost" type="Label" parent="stats_ColorRect/Health/Label"]
layout_mode = 0
offset_left = 194.0
offset_top = -3.0
offset_right = 245.0
offset_bottom = 14.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_tmauq")
text = "2 points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="stats_ColorRect"]
layout_mode = 0
offset_left = 235.0
offset_top = 17.0
offset_right = 281.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_4p276")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_5viw2")
theme_override_styles/hover = SubResource("StyleBoxFlat_q0gs2")
text = "Back"

[node name="pause_ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.223529)

[node name="PanelContainer" type="PanelContainer" parent="pause_ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -72.0
offset_right = 54.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="pause_ColorRect/PanelContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 11
alignment = 1

[node name="Resume" type="Button" parent="pause_ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_cfr80")
theme_override_styles/hover = SubResource("StyleBoxFlat_s3in2")
text = "Resume"

[node name="Restart" type="Button" parent="pause_ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_467td")
theme_override_styles/hover = SubResource("StyleBoxFlat_pfsfk")
text = "Restart"

[node name="Quit" type="Button" parent="pause_ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_ao2y4")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_vrdp5")
theme_override_styles/hover = SubResource("StyleBoxFlat_s08qj")
text = "Quit"

[connection signal="pressed" from="stats_ColorRect/Attack/Label/AtkInc" to="." method="_on_atk_inc_pressed"]
[connection signal="pressed" from="stats_ColorRect/Stun/Label/StunInc" to="." method="_on_stun_inc_pressed"]
[connection signal="pressed" from="stats_ColorRect/CritRate/Label/CRInc" to="." method="_on_cr_inc_pressed"]
[connection signal="pressed" from="stats_ColorRect/CritDamage/Label/CDInc" to="." method="_on_cd_inc_pressed"]
[connection signal="pressed" from="stats_ColorRect/Health/Label/BuyPotion" to="." method="_on_buy_potion_pressed"]
[connection signal="pressed" from="stats_ColorRect/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="pause_ColorRect/PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="pause_ColorRect/PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="pause_ColorRect/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
